fix for unscrollable about page on mobile

--- a/assets/css/daily-myths.css
+++ b/assets/css/daily-myths.css
@@ -1,8 +1,8 @@
 html{
-  height:100%;
+ /* height:100%;*/
 }
 body{
-  height:100%;
+  /*height:100%;*/
 	font-family:'Helvetica Neue',Helvetica, Arial, sans-serif;
 	margin:0;
 	padding:0;
@@ -273,13 +273,17 @@ and (max-device-width : 480px) {
   html,body{
     font-size:100%;
     height:auto;
-    min-height:100%;
   }
   #card h2 {
     margin: 0.3em 0.6em;
   }
-  #about .face{
-    width:100%%;
+  #about .face {
+      height: auto;
+      min-height: 1100px;
+      width: 100%
+  }
+  #about{
+      min-height: 1100px;
   }
 }
 
